Swagger documentation almost finished...
